--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
 body{
     background-color: black;
+    scroll-behavior: smooth;
+  max-width: 100%;
+  overflow-x: hidden
 }
 html {
   scroll-behavior: smooth;
